# PersonalVoiceAssistant

./: .gitignore  Makefile  assistant.c  assistent.c  pyproject.toml  requirements.txt
src/: Makefile  main.py  parser_weather.py
src/meta/: meta.py
src/parser/: parser_weather.py  test_parser_weather.py
test_google/: main.py  test.py
