[tool.poetry]
name = "personalvoiceassistant"
version = "0.1.0"
description = ""
authors = ["Lebedev Sergey <sergeylebedevvach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
speechrecognition = "^3.10.4"
pyttsx3 = "^2.98"
gtts = "^2.5.3"
nltk = "^3.9.1"
spacy = "^3.8.2"
pyaudio = "^0.2.14"
bs4 = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
